--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,26 +56,27 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Principal\MultiLobby.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\MultiLobby.cs" />
     <Compile Include="Assets\Scripts\Escenario\Configuracion.cs" />
     <Compile Include="Assets\Photon\PhotonLibs\WebSocket\SocketWebTcp.cs" />
     <Compile Include="Assets\Scripts\Partida\Guardar.cs" />
     <Compile Include="Assets\Scripts\Partida\Cargar.cs" />
     <Compile Include="Assets\Scripts\Escenario\Objetos.cs" />
-    <Compile Include="Assets\Scripts\Idiomas\IdiomasPrincipal.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Idiomas\IdiomasPrincipal.cs" />
     <Compile Include="Assets\Scripts\Partida\ClasesStructs.cs" />
     <Compile Include="Assets\Scripts\Jugador\Bola.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Llano.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\ObjetosPrincipal.cs" />
     <Compile Include="Assets\Scripts\Jugador\Transparentar.cs" />
-    <Compile Include="Assets\Scripts\Principal\MultiConexion.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\MultiConexion.cs" />
     <Compile Include="Assets\Scripts\Partida\NoDestruir.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Forma.cs" />
     <Compile Include="Assets\Scripts\Escenario\Animaciones\PaloEmpujarBola.cs" />
     <Compile Include="Assets\Scripts\Escenario\Interfaz.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosCargarPartida.cs" />
     <Compile Include="Assets\Scripts\Jugador\TablaGolpes.cs" />
     <Compile Include="Assets\Scripts\Principal\Opciones.cs" />
     <Compile Include="Assets\Scripts\Escenario\Animaciones\PresentacionHoyoBola.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosCargando.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Limites.cs" />
     <Compile Include="Assets\Scripts\Principal\PersonalizarBola.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Vectores.cs" />
@@ -87,10 +88,13 @@
     <Compile Include="Assets\Scripts\Jugador\MultiNombres.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Muros.cs" />
     <Compile Include="Assets\Scripts\Jugador\Personalizar.cs" />
-    <Compile Include="Assets\Scripts\Idiomas\Idiomas.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Idiomas\Idiomas.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosMultiConexion.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Hoyo.cs" />
-    <Compile Include="Assets\Scripts\Idiomas\IdiomasEscenario.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Idiomas\IdiomasEscenario.cs" />
     <Compile Include="Assets\Scripts\Jugador\Atributos.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosPrincipal.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosMultiSala.cs" />
     <Compile Include="Assets\Scripts\Recursos\CampoHoyo.cs" />
     <Compile Include="Assets\Scripts\Recursos\Campo.cs" />
     <Compile Include="Assets\Photon\PhotonLibs\WebSocket\WebSocket.cs" />
@@ -98,9 +102,11 @@
     <Compile Include="Assets\Scripts\Partida\MultiPartida.cs" />
     <Compile Include="Assets\Scripts\Escenario\Escenario.cs" />
     <Compile Include="Assets\Scripts\Recursos\Casilla.cs" />
-    <Compile Include="Assets\Scripts\Principal\Principal.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Principal.cs" />
     <Compile Include="Assets\Scripts\Escenario\Animaciones\SubirPaloHoyo.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Colores.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosNuevaPartida.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosMultiLobby.cs" />
     <Compile Include="Assets\Scripts\Partida\Unjugador.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Bola.cs" />
   </ItemGroup>
@@ -129,7 +135,7 @@
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\Photon\PhotonLibs\Metro\Photon3Unity3D.dll" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
-    <None Include="Assets\Scripts\Idiomas\Traducciones.xml" />
+    <None Include="Assets\Scripts\Interfaz\Idiomas\Traducciones.xml" />
     <None Include="Assets\Photon\PhotonLibs\Photon3Unity3D.xml" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
