--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,13 +70,13 @@
     <Compile Include="Assets\Scripts\Partida\NoDestruir.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Forma.cs" />
     <Compile Include="Assets\Scripts\Escenario\Animaciones\PaloEmpujarBola.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosOpciones.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosOpciones.cs" />
     <Compile Include="Assets\Scripts\Escenario\Interfaz.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosCargarPartida.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosCargarPartida.cs" />
     <Compile Include="Assets\Scripts\Jugador\TablaGolpes.cs" />
     <Compile Include="Assets\Scripts\Interfaz\Opciones.cs" />
     <Compile Include="Assets\Scripts\Escenario\Animaciones\PresentacionHoyoBola.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosCargando.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosCargando.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Limites.cs" />
     <Compile Include="Assets\Scripts\Interfaz\PersonalizarBola.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Vectores.cs" />
@@ -89,13 +89,13 @@
     <Compile Include="Assets\Scripts\Escenario\Colocar\Muros.cs" />
     <Compile Include="Assets\Scripts\Jugador\Personalizar.cs" />
     <Compile Include="Assets\Scripts\Interfaz\Idiomas\Idiomas.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosMultiConexion.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosMultiConexion.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Hoyo.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosEscenario.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Escenario\ObjetosPartida.cs" />
     <Compile Include="Assets\Scripts\Jugador\Atributos.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosPrincipal.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosMultiSala.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosPersonalizarBola.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosPrincipal.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosMultiSala.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosPersonalizarBola.cs" />
     <Compile Include="Assets\Scripts\Recursos\CampoHoyo.cs" />
     <Compile Include="Assets\Scripts\Recursos\Campo.cs" />
     <Compile Include="Assets\Photon\PhotonLibs\WebSocket\WebSocket.cs" />
@@ -106,8 +106,8 @@
     <Compile Include="Assets\Scripts\Interfaz\Principal.cs" />
     <Compile Include="Assets\Scripts\Escenario\Animaciones\SubirPaloHoyo.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Colores.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosNuevaPartida.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos\ObjetosMultiLobby.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosNuevaPartida.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosMultiLobby.cs" />
     <Compile Include="Assets\Scripts\Partida\Unjugador.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Bola.cs" />
   </ItemGroup>
