--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosCargando.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Limites.cs" />
     <Compile Include="Assets\Scripts\Interfaz\PersonalizarBola.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Escenario\ObjetosCargandoEscenario.cs" />
     <Compile Include="Assets\Scripts\Escenario\Generacion\Vectores.cs" />
     <Compile Include="Assets\Photon\PhotonRealtime\Demos\DemoLoadBalancing\ConnectAndJoinRandomLb.cs" />
     <Compile Include="Assets\Scripts\Partida\Datos.cs" />
@@ -111,7 +112,7 @@
     <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosMultiLobby.cs" />
     <Compile Include="Assets\Scripts\Partida\Unjugador.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Bola.cs" />
-    <Compile Include="Assets\Scripts\Interfaz\Objetos Escenario\ObjetosCargandoEscenario.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Escenario\ObjetosTablaGolpes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
