--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosMultiLobby.cs" />
     <Compile Include="Assets\Scripts\Partida\Unjugador.cs" />
     <Compile Include="Assets\Scripts\Escenario\Colocar\Bola.cs" />
+    <Compile Include="Assets\Scripts\Interfaz\Objetos Escenario\ObjetosNuevoNivel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
