--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -121,7 +121,7 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\Photon\PhotonLibs\netstandard2.0\Photon3Unity3D.xml" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
-    <None Include="Assets\Shaders\Hierba\HierbaGeometria.shader" />
+    <None Include="Assets\Shaders\Hierba\HierbaShader.shader" />
     <None Include="Assets\Photon\PhotonUnityNetworking\changelog.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\Shaders\Hierba\CustomTessellation.cginc" />
