--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,7 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Interfaz\MultiLobby.cs" />
-    <Compile Include="Assets\Scripts\Shaders\Hierba\GrassDisplacementObject2.cs" />
+    <Compile Include="Assets\Scripts\Shaders\Hierba\HierbaDesplazamientoBola.cs" />
     <Compile Include="Assets\Scripts\Interfaz\Objetos Escenario\ObjetosTablaGolpes.cs" />
     <Compile Include="Assets\Scripts\Escenario\Configuracion.cs" />
     <Compile Include="Assets\Photon\PhotonLibs\WebSocket\SocketWebTcp.cs" />
@@ -74,7 +74,7 @@
     <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosOpciones.cs" />
     <Compile Include="Assets\Scripts\Escenario\Interfaz.cs" />
     <Compile Include="Assets\Scripts\Interfaz\Objetos Principal\ObjetosCargarPartida.cs" />
-    <Compile Include="Assets\Scripts\Shaders\Hierba\GrassDisplacementCamera2.cs" />
+    <Compile Include="Assets\Scripts\Shaders\Hierba\HierbaDesplazamientoCamara.cs" />
     <Compile Include="Assets\Scripts\Jugador\TablaGolpes.cs" />
     <Compile Include="Assets\Scripts\Interfaz\Opciones.cs" />
     <Compile Include="Assets\Scripts\Escenario\Animaciones\PresentacionHoyoBola.cs" />
@@ -121,7 +121,7 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\Photon\PhotonLibs\netstandard2.0\Photon3Unity3D.xml" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
-    <None Include="Assets\Shaders\Hierba\HierbaShader.shader" />
+    <None Include="Assets\Shaders\Hierba\Hierba.shader" />
     <None Include="Assets\Photon\PhotonUnityNetworking\changelog.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\Shaders\Hierba\CustomTessellation.cginc" />
@@ -141,7 +141,7 @@
     <None Include="Assets\Photon\PhotonUnityNetworking\readme.txt" />
     <None Include="Assets\Photon\PhotonLibs\netstandard2.0\Photon3Unity3D.dll" />
     <None Include="Assets\Photon\PhotonLibs\Photon3Unity3D.dll" />
-    <None Include="Assets\Shaders\Hierba\DisplacementTexture.shader" />
+    <None Include="Assets\Shaders\Hierba\HierbaBola.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\Photon\PhotonLibs\Metro\Photon3Unity3D.dll" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
